@@ -37,10 +37,18 @@ TUNABLE_CALLBACK (set_mutex_spin_count) (tunable_val_t *valp)
   __mutex_aconf.spin_count = (int32_t) (valp)->numval;
 }
 
+static void
+TUNABLE_CALLBACK (set_stack_hugetlb) (tunable_val_t *valp)
+{
+  __nptl_stack_hugetlb = (int) valp->numval;
+}
+
 void
 __pthread_tunables_init (void)
 {
   TUNABLE_GET (mutex_spin_count, int32_t,
                TUNABLE_CALLBACK (set_mutex_spin_count));
+  TUNABLE_GET (stack_hugetlb, int32_t,
+	       TUNABLE_CALLBACK (set_stack_hugetlb));
 }
 #endif
